
          reserved config property names (plugin_name, zilla) are now fatal
          during config read rather than plugin instantiation

          core license attrs will look in the %Rights stash for defaults

          `dzil new` will work if you have no configured profiles

          generated Makefile.PL no longer has trailing spaces (Florian Ragwitz)

3.101520  2010-06-01 11:50:16 America/New_York
          unixify all gathered filenames (Christian Walde)

          ModuleBuild can use a custom M::B class (David Golden, Dave Rolsky)

          set release_status distmeta based on is_trial (Apocalypse)

          PkgVersion ignores packages which have a newline between the package
          keyword and the package name (Dave Rolsky)

          add version to :ExecFiles (scripts) as well as libraries with
          PkgVersion and PodVersion

          added --in option to the 'build' command (Marcel Gruenauer)

3.101461  2010-05-26 22:34:18 America/New_York

3.101460  2010-05-26 08:14:23 America/New_York
          note required version of Config::MVP::Reader::INI

          require a newer CPAN::Meta::Converter for laxer url validation

3.101450  2010-05-25 18:18:09 America/New_York
          compatibility with Config::MVP v1

          merge test requires into build requires for MakeMaker

          require a newer CPAN::Meta::Converter for custom key downgrades

3.101421  2010-05-22 20:48:10 America/New_York
          note the new version of CPAN::Meta::Converter required

3.101410  2010-05-21 22:17:44 America/New_York
          cope with newest Config::MVP

3.101400  2010-05-20 11:30:41 America/New_York
          ModuleBuild now uses $^X to run Build (Christian Walde)
          
          MakeMaker now uses the "make" program found in Config (Christian
          Walde)

3.101390  2010-05-19 09:15:32 America/New_York
          INCOMPATIBLE CHANGES:

          the as_distmeta method of Prereqs is removed
